# ServerTemplate

./: .gitattributes  .gitignore  ADMIN_WORKFLOW_PHASE11.md  CADDY_DEPLOYMENT.md  CALENDAR_PHASE1.md  CALENDAR_PHASE2.md  CALENDAR_PHASE3.md  CALENDAR_PHASE5.md  CMakeLists.txt  DEPLOYMENT.md  GALLERY_PHASE8.md  NOTIFICATIONS.md  RATE_LIMITING.md  README.md  SERVER_CONFIGURATION.md  SQLITE_MIGRATION.md  TESTING.md  admin_appointments.c  admin_appointments.h  admin_calendar.c  admin_calendar.h  admin_dashboard.c  admin_dashboard.h  admin_notifications.c  admin_notifications.h  auth.c  auth.h  availability.c  availability.h  booking.c  booking.h  booking_database.c  booking_database.h  calendar_database.c  calendar_database.h  calendar_public.c  calendar_public.h  calendar_time.c  calendar_time.h  contact_links.c  (+27 more)
deploy/: notification.env.example  server.env.example
deploy/caddy/: caddy.env.example  styles4dogs.caddy
deploy/scripts/: backup.sh  install-caddy.sh  install.sh  restore.sh  uninstall-caddy.sh  uninstall.sh  verify-caddy.sh  verify-installation.sh
deploy/systemd/: caddy-styles4dogs.conf  styles4dogs-backup.service  styles4dogs-backup.timer  styles4dogs-notification.service  styles4dogs-notification.timer  styles4dogs.service
deploy/tests/: test_deployment.sh
docs/: Doxyfile.in  REFACTORING.md
docs/history/: ADDRESS_PHASE10.md  BOOKING_WORKFLOW_PHASE13.md  CALENDAR_PHASE3.md  CALENDAR_PHASE4.md  CALENDAR_PHASE6.md  CALENDAR_PHASE7.md  CUSTOMER_PORTAL_PHASE9.md
docs/operations/: BOOKING_MANAGEMENT.md  CADDY_DEPLOYMENT.md  DEPLOYMENT.md  NOTIFICATIONS.md  RATE_LIMITING.md  SERVER_CONFIGURATION.md  SQLITE_MIGRATION.md  TESTING.md
fuzzing/afl/: :memory:  :memory:-journal  Makefile  README.md  build.sh  build_calendar.sh  calendar.dict  calendar_fuzz_target.c  clean.sh  http.dict  replay_crash.sh  run.sh  run_calendar.sh  run_parallel.sh  runtime_env.sh  status.sh
fuzzing/afl/calendar_in/: 01-valid.txt  02-invalid-date.txt  03-unknown-service.txt
fuzzing/afl/in/: 02-get-css.http  03-head-prices.http  04-post-booking.http  05-admin-invalid-auth.http  06-get-setup.http  07-post-setup-invalid-csrf.http  08-malformed.http  09-traversal.http  10-http-1.0.http  11-post-admin-status-invalid-auth.http  12-get-admin-filter-invalid-auth.http  13-post-booking-proxied.http  14-get-services.http  15-get-availability.http  16-get-admin-calendar-invalid-auth.http  17-post-admin-calendar-settings-invalid-auth.http  18-post-admin-booking-accept-invalid-auth.http  19-post-admin-service-add-invalid-auth.http  20-get-admin-appointments-invalid-auth.http  21-post-booking-honeypot.http  22-get-gallery.http  23-get-admin-gallery-invalid-auth.http  24-post-admin-gallery-upload-invalid-auth.http
include/styles4dogs/admin/: admin_appointments.h  admin_booking_management.h  admin_calendar.h  admin_dashboard.h  admin_notifications.h
include/styles4dogs/booking/: booking.h  booking_database.h  booking_management.h  customer_portal.h
include/styles4dogs/calendar/: availability.h  calendar_database.h  calendar_public.h  calendar_time.h
include/styles4dogs/core/: server_config.h
include/styles4dogs/gallery/: gallery.h
include/styles4dogs/http/: form_urlencoded.h  http_lib.h  process.h
include/styles4dogs/notifications/: notification_queue.h  notification_settings.h  notification_templates.h
include/styles4dogs/security/: admin_session.h  auth.h  rate_limit.h
include/styles4dogs/services/: contact_links.h  contact_validation.h  postal_lookup.h
public/: admin-calendar.js  admin-gallery.js  admin-notifications.js  calendar.js  datenschutz.html  galerie.html  gallery.js  impressum.html  index.html  kontakt.html  leistungen.html  postal-code.js  preise.html  style.css
src/admin/: admin_appointments.c  admin_booking_management.c  admin_calendar.c  admin_dashboard.c  admin_notifications.c
src/app/: notification_worker_main.c  server_main.c
src/booking/: booking.c  booking_database.c  booking_management.c  customer_portal.c
src/calendar/: availability.c  calendar_database.c  calendar_public.c  calendar_time.c
src/core/: server_config.c
src/gallery/: gallery.c
src/http/: form_urlencoded.c  http_lib.c  process.c
src/notifications/: notification_queue.c  notification_settings.c  notification_templates.c
src/security/: admin_session.c  auth.c  rate_limit.c
src/services/: contact_links.c  contact_validation.c  postal_lookup.c
tests/: calendar_engine_tests.c
tests/pewpewlaz0rt4nk/: README.md  pewpewlaz0rt4nk.py  run.sh  tests_styles4dogs.py
tools/: create_admin_user.c
